Updated copy, layout bug
• Center H3 text on Enterprise Overview
• New copy on Enterprise Pricing page
• Updated copy on home page hero

--- a/source/assets/stylesheets/enterprise/_enterprise.scss
+++ b/source/assets/stylesheets/enterprise/_enterprise.scss
@@ -111,6 +111,17 @@
         padding: 0;
         padding-left: 16px;
     }
+
+    .pricing-page-text {
+
+        text-align: center;
+
+        @media (min-width: $screen-md) {
+            max-width: 50vw;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
 }
 
 .addon-feature-section {
